CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - 2.7.1-dev

contrib
======================

packager
----------------------
* Fix build root and rpm destination for rpm target. Patch by Joseph Benavidez.

dashboard
======================
NOTE: The dashboard has known display issues in Internet Explorer 6.
* Allowed artifacts to be kept in an arbitrary locations.
* Allowed config.xml to be kept in an arbitrary location
* Can render html/xml/txt in the browser.
* Can display the unit test output for passed builds.
* Enhanced the dashboard to display artifacts directories as tree structure.
* Added a the cc-config (http://cc-config.sourceforge.net/) application so that it can be included in the dashboard (CC-658). Patch by Allan Wick. 

build loop
======================

ConcurrentVersionsSystem
----------------------
* Added the ability to set the cvs compression level (CC-579). Patch by Maxim Butov.

CVSBootstrapper
----------------------
* Added the ability to set the cvs compression level (CC-579). Patch by Maxim Butov.

Main
----------------------
* Put the ccname command line parameter back, after being inadvertently removed (CC-651). Patch by Lars Gehrken.

MavenMapper
----------------------
* MavenMapper extracts the email address for a certain committing user as configured in Mavens project.xml or pom.xml (M1 or M2) (CC-618). Contributed by Gisbert Amm.

Project
----------------------
* Added a property named "buildforced" that will get passed to builders for conditional control (CC-653). Patch by Dave Kilroy.

PropertiesMapper
----------------------
* Refactored validation for cleanliness and removing duplication with ValidationHelper (CC-642). Patch by Gisbert Amm.

Schedule
----------------------
* Added trap for zero or less interval and updated docs to indicate that they are not legitimate values (CC-652). Suggested by Jeff Jensen.

TimeBuild
----------------------