@@ -29,6 +29,7 @@ clearcase=net.sourceforge.cruisecontrol.sourcecontrols.ClearCase
 cmsynergy=net.sourceforge.cruisecontrol.sourcecontrols.CMSynergy
 compound=net.sourceforge.cruisecontrol.sourcecontrols.Compound
 cvs=net.sourceforge.cruisecontrol.sourcecontrols.ConcurrentVersionsSystem
+darcs=net.sourceforge.cruisecontrol.sourcecontrols.Darcs
 filesystem=net.sourceforge.cruisecontrol.sourcecontrols.FileSystem
 forceonly=net.sourceforge.cruisecontrol.sourcecontrols.ForceOnly
 harvest=net.sourceforge.cruisecontrol.sourcecontrols.AllFusionHarvestCM511
